Basic layout created

--- a/src/main/webapp/prototype/characterDetailPrivate.html
+++ b/src/main/webapp/prototype/characterDetailPrivate.html
@@ -44,25 +44,56 @@
                 <img src="files/upload/hrac1.png" class="avatar" alt="AvatarHracoviPostavy"/>
             </div>
 
-            <div class="name">Jméno postavy</div>
+            <h2>Jméno postavy</h2>
 
-            <div class="age">28</div>
+            <div class="age">Věk: <span>28</span></div>
 
             <div class="description">
-                Krátký popis vaší postavy. Může být i relativně dlouhý. Hlavní
-                součástí tohoto popisu jsou pak charakteristiky vaší postavy.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam scelerisque, purus et viverra
+                mattis, augue purus adipiscing tellus, vel suscipit ipsum nibh id mauris. Sed diam urna,
+                rhoncus convallis nibh sed, pretium vulputate elit. Interdum et malesuada fames ac ante
+                ipsum primis in faucibus. Phasellus orci neque, adipiscing eu semper at, luctus at nulla.
+                Quisque sit amet metus sagittis, bibendum urna a, fermentum eros. Phasellus leo metus,
+                ultricies at enim eget, posuere tempor lacus. Morbi pulvinar ullamcorper cursus. Cras a
+                nisl nisl.
             </div>
 
             <div class="stories full">
                 <div class="story">
                     <div class="name"><a href="storyDetailPrivate.html">Jméno příběhu</a></div>
-                    <div class="description public">Veřejný popis tohoto příběhu.</div>
-                    <div class="description private">Tajný popis tohoto příběhu.</div>
-                    <div class="description private role">Tajný popis tohoto příběhu specifický pro vaši roli.</div>
+                    <div class="description public">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam scelerisque, purus et viverra
+                        mattis, augue purus adipiscing tellus, vel suscipit ipsum nibh id mauris. Sed diam urna,
+                        rhoncus convallis nibh sed, pretium vulputate elit. Interdum et malesuada fames ac ante
+                        ipsum primis in faucibus. Phasellus orci neque, adipiscing eu semper at, luctus at nulla.
+                        Quisque sit amet metus sagittis, bibendum urna a, fermentum eros. Phasellus leo metus,
+                        ultricies at enim eget, posuere tempor lacus. Morbi pulvinar ullamcorper cursus. Cras a
+                        nisl nisl.
+                    </div>
+                    <div class="description private">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam scelerisque, purus et viverra
+                        mattis, augue purus adipiscing tellus, vel suscipit ipsum nibh id mauris. Sed diam urna,
+                        rhoncus convallis nibh sed, pretium vulputate elit. Interdum et malesuada fames ac ante
+                        ipsum primis in faucibus. Phasellus orci neque, adipiscing eu semper at, luctus at nulla.
+                        Quisque sit amet metus sagittis, bibendum urna a, fermentum eros. Phasellus leo metus,
+                        ultricies at enim eget, posuere tempor lacus. Morbi pulvinar ullamcorper cursus. Cras a
+                        nisl nisl.
+                    </div>
+                    <div class="description private role">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam scelerisque, purus et viverra
+                        mattis, augue purus adipiscing tellus, vel suscipit ipsum nibh id mauris. Sed diam urna,
+                        rhoncus convallis nibh sed, pretium vulputate elit. Interdum et malesuada fames ac ante
+                        ipsum primis in faucibus. Phasellus orci neque, adipiscing eu semper at, luctus at nulla.
+                        Quisque sit amet metus sagittis, bibendum urna a, fermentum eros. Phasellus leo metus,
+                        ultricies at enim eget, posuere tempor lacus. Morbi pulvinar ullamcorper cursus. Cras a
+                        nisl nisl.
+                    </div>
                     <div class="labels">
                         <div class="label">Špionážní</div>
                         <div class="label">Vražda</div>
                     </div>
+                    <div class="clear"></div>
+
                     <div class="participants">
                         <div class="participant"><a href="characterDetail.html">Muž, který vás schoval</a></div>
                         <div class="participant">Pronásledovatel a potenciálně váš vrah.</div>
