--- a/src/main/webapp/prototype/createCharacter.html
+++ b/src/main/webapp/prototype/createCharacter.html
@@ -75,6 +75,10 @@
                         </div>
                         <div class="error">Popis vaší postavy musí být neprázdný.</div>
                     </div>
+
+                    <div class="field">
+                        <input type="button" value="Vytvořit">
+                    </div>
                 </fieldset>
             </form>
         </div>
