--- a/src/main/webapp/prototype/createCharacterPublicCharacterInfo.html
+++ b/src/main/webapp/prototype/createCharacterPublicCharacterInfo.html
@@ -57,6 +57,7 @@
                     id, varius a odio. Nunc sodales augue consequat leo viverra, et pharetra mauris imperdiet. Sed ut
                     adipiscing neque. Duis vehicula malesuada enim. Aenean quis dapibus justo.
                 </div>
+                <div class="clear"></div>
             </div>
 
             <div class="character">
@@ -72,6 +73,7 @@
                     id, varius a odio. Nunc sodales augue consequat leo viverra, et pharetra mauris imperdiet. Sed ut
                     adipiscing neque. Duis vehicula malesuada enim. Aenean quis dapibus justo.
                 </div>
+                <div class="clear"></div>
             </div>
         </div>
 
