--- a/src/main/webapp/prototype/registration.html
+++ b/src/main/webapp/prototype/registration.html
@@ -79,6 +79,10 @@
                         <div class="input"><input type="text" id="photo" name="photo" value=""/></div>
                         <div class="error">Fotografie musí být zadána.</div>
                     </div>
+
+                    <div class="field">
+                        <input type="button" value="Zaregistrovat">
+                    </div>
                 </fieldset>
             </form>
         </div>
