--- a/src/main/webapp/prototype/storyDetailPrivate.html
+++ b/src/main/webapp/prototype/storyDetailPrivate.html
@@ -40,7 +40,7 @@
         <div class="left">
             <h1>Detail příběhu</h1>
 
-            <div class="name">Jméno</div>
+            <h2>Jméno</h2>
             <div class="description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam scelerisque, purus et viverra
                 mattis, augue purus adipiscing tellus, vel suscipit ipsum nibh id mauris. Sed diam urna,
@@ -55,25 +55,22 @@
                 pellentesque. Phasellus lobortis iaculis congue.s
             </div>
 
-            <h2>Štítky charakterizující tento příběh.</h2>
+            <h3>Štítky charakterizující tento příběh.</h3>
 
             <div class="labels">
-                <div class="required">
-                    <div class="label">Label 1</div>
-                    <div class="label">Label 2</div>
-                    <div class="label">Label 3</div>
-                </div>
-                <div class="optional">
-                    <div class="label">Label 3</div>
-                    <div class="label">Label 3</div>
-                </div>
+                <div class="label">Label 1</div>
+                <div class="label">Label 2</div>
+                <div class="label">Label 3</div>
+                <div class="label">Label 3</div>
+                <div class="label">Label 3</div>
             </div>
+            <div class="clear"></div>
 
-            <h2>Účastníci tohoto příběhu</h2>
+            <h3>Účastníci tohoto příběhu</h3>
 
             <div class="participant myself">
-                <div class="group">Zombie</div>
-                <div class="private">
+                <div class="group">Skupina: <span>Zombie</span></div>
+                <div class="private description">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam scelerisque, purus et viverra
                     mattis, augue purus adipiscing tellus, vel suscipit ipsum nibh id mauris. Sed diam urna,
                     rhoncus convallis nibh sed, pretium vulputate elit. Interdum et malesuada fames ac ante
@@ -81,20 +78,18 @@
                     Quisque sit amet metus sagittis, bibendum urna a, fermentum eros.
                 </div>
                 <div class="labels">
-                    <div class="required">
-                        <div class="label">Label 1</div>
-                        <div class="label">Label 2</div>
-                        <div class="label">Label 3</div>
-                    </div>
-                    <div class="optional">
-                        <div class="label">Label 3</div>
-                        <div class="label">Label 3</div>
-                    </div>
+                    <div class="label">Label 1</div>
+                    <div class="label">Label 2</div>
+                    <div class="label">Label 3</div>
+                    <div class="label">Label 3</div>
+                    <div class="label">Label 3</div>
                 </div>
+
+                <div class="clear"></div>
             </div>
 
             <div class="participant">
-                <div class="group">Přeživší</div>
+                <div class="group">Skupina: <span>Přeživší</span></div>
                 <div class="labels">
                     <div class="label">Label 1</div>
                     <div class="label">Label 2</div>
@@ -102,6 +97,8 @@
                     <div class="label">Label 3</div>
                     <div class="label">Label 3</div>
                 </div>
+
+                <div class="clear"></div>
             </div>
         </div>
 
@@ -115,6 +112,8 @@
                     <div class="label">Detektivní</div>
                     <div class="label">Akční</div>
                 </div>
+
+                <div class="clear"></div>
             </div>
 
             <div class="story">
@@ -124,6 +123,8 @@
                     <div class="label">Detektivní</div>
                     <div class="label">Akční</div>
                 </div>
+
+                <div class="clear"></div>
             </div>
         </div>
     </div>
