--- a/src/main/webapp/prototype/storyDetailPublic.html
+++ b/src/main/webapp/prototype/storyDetailPublic.html
@@ -40,7 +40,7 @@
         <div class="left">
             <h1>Detail příběhu</h1>
 
-            <div class="name">Jméno</div>
+            <h2>Jméno</h2>
             <div class="description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam scelerisque, purus et viverra
                 mattis, augue purus adipiscing tellus, vel suscipit ipsum nibh id mauris. Sed diam urna,
@@ -55,35 +55,29 @@
                 pellentesque. Phasellus lobortis iaculis congue.s
             </div>
 
-            <h2>Štítky charakterizující tento příběh.</h2>
+            <h3>Štítky charakterizující tento příběh.</h3>
 
             <div class="labels">
-                <div class="required">
+                <div class="label">Label 1</div>
+                <div class="label">Label 2</div>
+                <div class="label">Label 3</div>
+                <div class="label">Label 3</div>
+                <div class="label">Label 3</div>
+            </div>
+            <div class="clear"></div>
+
+            <h3>Účastníci tohoto příběhu</h3>
+
+            <div class="participant">
+                <div class="group">Skupina: <span>Zombie</span></div>
+                <div class="labels">
                     <div class="label">Label 1</div>
                     <div class="label">Label 2</div>
                     <div class="label">Label 3</div>
-                </div>
-                <div class="optional">
                     <div class="label">Label 3</div>
                     <div class="label">Label 3</div>
                 </div>
-            </div>
-
-            <h2>Účastníci tohoto příběhu</h2>
-
-            <div class="participant">
-                <div class="group"></div>
-                <div class="labels">
-                    <div class="required">
-                        <div class="label">Label 1</div>
-                        <div class="label">Label 2</div>
-                        <div class="label">Label 3</div>
-                    </div>
-                    <div class="optional">
-                        <div class="label">Label 3</div>
-                        <div class="label">Label 3</div>
-                    </div>
-                </div>
+                <div class="clear"></div>
             </div>
         </div>
 
@@ -97,6 +91,7 @@
                     <div class="label">Detektivní</div>
                     <div class="label">Akční</div>
                 </div>
+                <div class="clear"></div>
             </div>
 
             <div class="story">
@@ -106,6 +101,7 @@
                     <div class="label">Detektivní</div>
                     <div class="label">Akční</div>
                 </div>
+                <div class="clear"></div>
             </div>
         </div>
     </div>
