--- a/src/main/webapp/prototype/addStoriesToCharacter.html
+++ b/src/main/webapp/prototype/addStoriesToCharacter.html
@@ -9,6 +9,9 @@
     <meta name="keywords" content="larp, nákaza, zombie, apokalypsa, čr">
     <meta name="description" content="Nákaza, aneb jak to vypadalo na začátku zombie apokalypsy.">
 
+    <script type="text/javascript" src="js/jquery-2.0.3.min.js">;</script>
+    <script type="text/javascript" src="js/jquery-ui.min.js">;</script>
+
     <title>
         Nákaza
     </title>
@@ -36,6 +39,13 @@
     </div>
 
     <div class="content">
+        <script type="text/javascript">
+            $(function() {
+                $( "#sortable1, #sortable2" ).sortable({
+                    connectWith: ".connectedSortable"
+                }).disableSelection();
+            });
+        </script>
         <!--
             Tři stavy - Nepřihlášen, Postava už existuje, Tvorba nové postavy.
         -->
@@ -46,15 +56,23 @@
                 Zbývá <span class="availablePoints">20</span> bodů schopnosti.
             </div>
 
-            <div class="availableStories">
-                <div class="story">Příběh 1</div>
-                <div class="story">Příběh 2</div>
-                <div class="story">Příběh 3</div>
-            </div>
-            <div class="myStories">
-                <div class="story">Můj příběh 1</div>
-                <div class="story">2 Další příběh</div>
-                <div class="story">Podivný příběh, který envíš jestli chceš.</div>
+            <div class="storyLines">
+                <div class="availableStories">
+                    <h3>Příběhy, kterých se můžete zůčastnit</h3>
+                    <div id="sortable1" class="connectedSortable">
+                        <div class="story">Příběh 1</div>
+                        <div class="story">Příběh 2</div>
+                        <div class="story">Příběh 3</div>
+                    </div>
+                </div>
+                <div class="myStories">
+                    <h3>Vaše příběhy</h3>
+                    <div id="sortable2" class="connectedSortable">
+                        <div class="story">Můj příběh 1</div>
+                        <div class="story">2 Další příběh</div>
+                        <div class="story">Podivný příběh, který envíš jestli chceš.</div>
+                    </div>
+                </div>
             </div>
         </div>
 
