--- a/src/main/webapp/prototype/characterDetail.html
+++ b/src/main/webapp/prototype/characterDetail.html
@@ -21,9 +21,9 @@
             <img src="img/logo128.png" alt="logoHry">
         </div>
         <div class="login">
-            <img src="files/upload/hrac1.png" class="avatar" alt="AvatarHráčoviPostavy" />
-
             <a href="characterDetail.html">Moje postava</a>
+
+            <img src="files/upload/hrac1.png" class="avatar" alt="AvatarHráčoviPostavy" />
         </div>
     </div>
 
@@ -44,32 +44,55 @@
                 <img src="files/upload/hrac1.png" class="avatar" alt="AvatarHracoviPostavy"/>
             </div>
 
-            <div class="name">Jméno postavy</div>
+            <h2>Jméno postavy</h2>
 
-            <div class="age">28</div>
+            <div class="age">Věk: <span>28</span></div>
 
             <div class="description">
-                Krátký popis vaší postavy. Může být i relativně dlouhý. Hlavní
-                součástí tohoto popisu jsou pak charakteristiky vaší postavy.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam scelerisque, purus et viverra
+                mattis, augue purus adipiscing tellus, vel suscipit ipsum nibh id mauris. Sed diam urna,
+                rhoncus convallis nibh sed, pretium vulputate elit. Interdum et malesuada fames ac ante
+                ipsum primis in faucibus. Phasellus orci neque, adipiscing eu semper at, luctus at nulla.
+                Quisque sit amet metus sagittis, bibendum urna a, fermentum eros. Phasellus leo metus,
+                ultricies at enim eget, posuere tempor lacus. Morbi pulvinar ullamcorper cursus. Cras a
+                nisl nisl.
             </div>
 
             <div class="stories full">
                 <div class="story">
                     <div class="name"><a href="storyDetailPublic.html">Jméno příběhu</a></div>
-                    <div class="description public">Veřejný popis tohoto příběhu.</div>
+                    <div class="description public">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam scelerisque, purus et viverra
+                        mattis, augue purus adipiscing tellus, vel suscipit ipsum nibh id mauris. Sed diam urna,
+                        rhoncus convallis nibh sed, pretium vulputate elit. Interdum et malesuada fames ac ante
+                        ipsum primis in faucibus. Phasellus orci neque, adipiscing eu semper at, luctus at nulla.
+                        Quisque sit amet metus sagittis, bibendum urna a, fermentum eros. Phasellus leo metus,
+                        ultricies at enim eget, posuere tempor lacus. Morbi pulvinar ullamcorper cursus. Cras a
+                        nisl nisl.
+                    </div>
                     <div class="labels">
                         <div class="label">Špionážní</div>
                         <div class="label">Vražda</div>
                     </div>
+                    <div class="clear"></div>
                 </div>
 
                 <div class="story">
                     <div class="name"><a href="storyDetailPublic.html">Jméno příběhu</a></div>
-                    <div class="description public">Veřejný popis tohoto příběhu.</div>
+                    <div class="description public">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam scelerisque, purus et viverra
+                        mattis, augue purus adipiscing tellus, vel suscipit ipsum nibh id mauris. Sed diam urna,
+                        rhoncus convallis nibh sed, pretium vulputate elit. Interdum et malesuada fames ac ante
+                        ipsum primis in faucibus. Phasellus orci neque, adipiscing eu semper at, luctus at nulla.
+                        Quisque sit amet metus sagittis, bibendum urna a, fermentum eros. Phasellus leo metus,
+                        ultricies at enim eget, posuere tempor lacus. Morbi pulvinar ullamcorper cursus. Cras a
+                        nisl nisl.
+                    </div>
                     <div class="labels">
                         <div class="label">Trest</div>
                         <div class="label">Vražda</div>
                     </div>
+                    <div class="clear"></div>
                 </div>
             </div>
         </div>
