Spraveno zobrazovani poslednich peti pridanych postav. Kosmeticke upravy (velikosti nadpisu, odsazeni, velikost obrazku). Nove informace o zazemi a svete. Pridany vedlejsi menu.

--- a/src/main/webapp/prototype/addStoriesToCharacter.html
+++ b/src/main/webapp/prototype/addStoriesToCharacter.html
@@ -53,7 +53,7 @@
             <h1>Tvorba postavy</h1>
 
             <div class="info">
-                Zbývá <span class="availablePoints">20</span> bodů schopnosti.
+                Zbývá <span class="availablePoints">20</span> příběhových bodů.
             </div>
 
             <div class="storyLines">
