--- a/src/main/webapp/prototype/characterDetail.html
+++ b/src/main/webapp/prototype/characterDetail.html
@@ -41,7 +41,7 @@
             <h1>O vaší postavě</h1>
 
             <div class="avatarImage">
-                <img src="files/upload/hrac1.png" class="avatar" alt="AvatarHracoviPostavy"/>
+                <img src="files/upload/hrac1.png" class="avatar" alt="AvatarHracovyPostavy"/>
             </div>
 
             <h2>Jméno postavy</h2>
